--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.h2.console.enabled=true
 
 
 # H2 LOCAL DB SERVER
-spring.datasource.url=jdbc:h2:/home/luis/projects/database/airportDB/airportDB
+spring.datasource.url=jdbc:h2:/home/luis/Documents/Projects/Airport.DB
 spring.datasource.username=luis
 spring.datasource.password=
 
 # DDL OPTIONS: create-drop, create, update, none, validate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
